feat:animation on scroll

--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
 
                 <div class="about-content-wrapper">
 
-                    <div class="about-text">
+                    <div class="about-text fadein-onscroll">
                         <p class="mb-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis inventore provident ut sint vero adipisci enim a, porro atque corporis pariatur cupiditate accusantium alias architecto laboriosam rerum laudantium impedit maiores consequatur suscipit numquam possimus voluptatum nostrum? Sit dicta corrupti mollitia corporis itaque. Tempore quidem quia neque ab harum, reprehenderit laboriosam.</p>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi corrupti optio quis? Velit eaque quo asperiores nesciunt ad cumque ex laborum, animi molestiae. Eius pariatur ratione obcaecati perspiciatis autem facilis omnis dolorum! Voluptates nesciunt non, hic sapiente totam illum et ex tenetur, tempora commodi voluptas, voluptatem quisquam! Sapiente, quam eos.</p>
                     </div>
 
-                    <div class="about-img">
-                        <img src="./images/img-5.jpg" alt="">
+                    <div class="about-img fadein-onscroll">
+                        <img src="./images/img-5.jpg" alt="about company" loading="lazy">
                     </div>
                 </div>
 
@@ -97,7 +97,7 @@
                     </div>
 
                     <div class="service-details-main">
-                        <div class="service-details-sub sub-left">
+                        <div class="service-details-sub sub-left fadein-onscroll">
 
                             <div class="service-details-para para-left">
                                 <h4>issues you will need us for includes</h4>
@@ -109,7 +109,7 @@
                             </div>
                         </div>
 
-                        <div class="service-details-sub sub-right">
+                        <div class="service-details-sub sub-right fadein-onscroll">
 
                             <div class="service-details-para para-right">
                                 <h4>documents you are likely to require from us for includes</h4>
@@ -123,7 +123,7 @@
                     </div>
 
                     <div class="service-details-main">
-                        <div class="service-details-sub sub-left">
+                        <div class="service-details-sub sub-left fadein-onscroll">
 
                             <div class="service-details-para para-left">
                                 <h4>issues you will need us for includes</h4>
@@ -135,7 +135,7 @@
                             </div>
                         </div>
 
-                        <div class="service-details-sub sub-right">
+                        <div class="service-details-sub sub-right fadein-onscroll">
 
                             <div class="service-details-para para-right">
                                 <h4>documents you are likely to require from us for includes</h4>
@@ -187,7 +187,7 @@
 
                 <div class="value-details-main">
 
-                    <div class="value-details-sub">
+                    <div class="value-details-sub fadein-onscroll">
                         <div class="value-icon">
                             <i class="fa fa-eye"></i>
                         </div>
@@ -197,7 +197,7 @@
                         </div>
                     </div>
 
-                    <div class="value-details-sub">
+                    <div class="value-details-sub fadein-onscroll">
                         <div class="value-icon">
                             <i class="fa fa-credit-card"></i>
                         </div>
@@ -207,7 +207,7 @@
                         </div>
                     </div>
 
-                    <div class="value-details-sub">
+                    <div class="value-details-sub fadein-onscroll">
                         <div class="value-icon">
                             <i class="fa fa-unlock-alt"></i>
                         </div>
@@ -221,7 +221,7 @@
 
                 <div class="value-details-main">
 
-                    <div class="value-details-sub">
+                    <div class="value-details-sub fadein-onscroll">
                         <div class="value-icon">
                             <i class="fa fa-wrench"></i>
                         </div>
@@ -231,7 +231,7 @@
                         </div>
                     </div>
 
-                    <div class="value-details-sub">
+                    <div class="value-details-sub fadein-onscroll">
                         <div class="value-icon">
                             <i class="fa fa-link"></i>
                         </div>
@@ -254,7 +254,7 @@
                     <h2>get in touch</h2>
                 </div>
 
-                <div class="contact-details-wrapper mb">
+                <div class="contact-details-wrapper mb fadein-onscroll">
 
                     <div class="contact-details">
                         <div class="contact-icon">
@@ -283,7 +283,7 @@
 
                 </div>
 
-                <div class="contact-form-container">
+                <div class="contact-form-container fadein-onscroll">
 
                     <div class="form-heading">
                         <div class="mb-sm contact-reasons">
