feat:change design

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="nav">
                     <a href="#" class="nav-link">Home</a>
                     <a href="#about" class="nav-link">About Us</a>
-                    <a href="#service" class="nav-link">Our Service</a>
+                    <a href="#service" class="nav-link">Our Services</a>
                     <a href="#values" class="nav-link">Our Values</a>
                     <a href="#contact" class="nav-link">Contact Us</a>
                     <a href="#" class="nav-link">Blog</a>
@@ -88,7 +88,7 @@
             <div class="service-content">
 
                 <div class="section-heading">
-                    <h2>Our service</h2>
+                    <h2>Our services</h2>
                 </div>
 
                 <div class="service-details-wrapper">
@@ -148,12 +148,17 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="learn-more">
+                    <a href="mailto:olaniyanfoluso498@gmail.com" class="learn-more-btn"> LEARN MORE</a>
+                </div>
+
             </div>
 
         </section>
 
         <!-- Learn More -->
-        <section class="feature feature-three">
+        <!-- <section class="feature feature-three">
 
             <div class="container">
 
@@ -170,15 +175,15 @@
 
             </div>
 
-        </section>
+        </section> -->
 
         <!-- Our Value section -->
         <section id="values" class="feature feature-four">
 
             <div class="value-content">
-
+                <p class="mb-sm"><small>We bring a wealth of market knowledge...</small></p>
                 <div class="section-heading">
-                    <h2>Our service</h2>
+                    <h2>Our Values</h2>
                 </div>
 
                 <div class="values-details-intro details-intro mb">
@@ -319,21 +324,27 @@
     <footer>
         <div class="footer-wrapper mb-sm">
             
-            <div class="footer-social mb">
+            <!-- <div class="footer-social mb">
                 <a href="https://facebook.com" target="_blank" rel="noreferrer"><i class="fab fa-facebook-f"></i></a>
                 <a href="https://twitter.com" target="_blank" rel="noreferrer"><i class="fab fa-twitter"></i></a>
                 <a href="https://instagram.com" target="_blank" rel="noreferrer"><i class="fab fa-instagram"></i></a>
-            </div>
+            </div> -->
 
-            <div class="web-rights mb">
+            <div class="web-rights mb-sm">
                 <p>2020 &copy; <span class="brand">Trust-M</span>. All rights reserved</p>
                 <div class="web-rights-policy">
                     <a href="#">Disclaimer</a> &and;  <a href="#">Legal Notice</a>
                 </div>
             </div>
 
+            <div class="footer-social mb">
+                <a href="https://facebook.com" target="_blank" rel="noreferrer"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://twitter.com" target="_blank" rel="noreferrer"><i class="fab fa-twitter"></i></a>
+                <a href="https://instagram.com" target="_blank" rel="noreferrer"><i class="fab fa-instagram"></i></a>
+            </div>
+
             <div class="footer-brand-logo">
-                <a href="#" class=             "brand-logo">TRUST-M</a>
+                <a href="#" class="brand-logo">TRUST-M</a>
             </div>
         </div>
     </footer>
